--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8" />
     <title>Vodum</title>
 
@@ -95,7 +96,7 @@
             <img
               class="title-image"
               src="images/Vodum_Illustration.svg"
-              alt="iphone-mockup"
+              alt="illustration"
             />
           </div>
         </div>
@@ -135,7 +136,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active container-fluid">
             <h2 class="testimonial-text">
-              BLOKK - MARKETPLACE
+              MARKETPLACE
             </h2>
             <img
               class="testimonial-image"
@@ -145,7 +146,7 @@
           </div>
           <div class="carousel-item container-fluid">
             <h2 class="testimonial-text">
-              BLOKK - CHARITY
+              CHARITY
             </h2>
             <img
               class="testimonial-image"
@@ -190,10 +191,10 @@
           </div>
           <h6 class="person-name">TOBIAS LAWS</h6>
           <p>CEO</p>
-          <button class="btn btn-lg" style="color: #2867B2">
+          <button class="btn btn-lg " style="color: #2867B2">
             <i class="fab fa-linkedin fa-lg"></i>
           </button>
-          <button class="btn btn-lg icon-btn" style="color: gray">
+          <button class="btn btn-lg icon-btn">
             <i class="fas fa-envelope fa-lg"></i>
           </button>
         </div>
@@ -209,7 +210,7 @@
           <button class="btn btn-lg" style="color: #2867B2">
             <i class="fab fa-linkedin fa-lg"></i>
           </button>
-          <button class="btn btn-lg icon-btn" style="color: gray">
+          <button class="btn btn-lg icon-btn">
             <i class="fas fa-envelope fa-lg"></i>
           </button>
         </div>
