--- a/index.html
+++ b/index.html
@@ -37,20 +37,20 @@
   <body>
     <header class="header">
       <div class="header__logo-box">
-        <img src="img/LOGO.svg" alt="Logo" class="header__logo" />
+        <img src="img/Logo-2x.png" alt="Logo" class="header__logo" />
       </div>
 
       <div class="header__text-box">
         <h1 class="heading-primary">
           <div class="heading-primary--main">
             <img
-              src="img/BALANCE.svg"
+              src="img/EXPORT-BALANCE.png"
               alt="Logo"
               class="header__balance-logo"
             />
           </div>
           <div class="heading-primary--sub">
-            <img src="img/STATS.svg" alt="Logo" class="header__stats-logo" />
+            <img src="img/EXPORT-STATS.png" alt="Logo" class="header__stats-logo" />
           </div>
         </h1>
         <!--<a href="#section-tours" class="btn btn--white btn--animated">Discover our tours</a>-->
@@ -142,7 +142,7 @@
           <div class="col-1-of-2">
             <div class="feature-box-transparent">
               <img
-                src="img/vodum-illustration-1.svg"
+                src="img/vodum-illu.png"
                 alt="Illustration"
                 class="about-illustration"
               />
@@ -219,7 +219,7 @@
           </div>
           <div class="col-1-of-2">
             <div class="feature-box-transparent">
-              <img src="img/MAP3.svg" alt="Illustration" class="map" />
+              <img src="img/MAP3.png" alt="Illustration" class="map" />
               <div class="map-text">
                 Lars Hilles gate 30, 5008 Bergen
               </div>
@@ -230,7 +230,7 @@
 
       <footer class="footer">
         <div class="footer__logo-box">
-          <img src="img/LOGO.svg" alt="Full logo" class="footer__logo" />
+          <img src="img/Logo-2x.png" alt="Full logo" class="footer__logo" />
         </div>
         <div class="row">
           <div class="col-1-of-1">
